make sure links in CDM content are visible

--- a/cdm.css
+++ b/cdm.css
@@ -33,6 +33,14 @@ div.cdmContent {
 	font-weight : normal;
 }
 
+div.cdmContent a {
+	color : #4684ff;
+}
+
+div.cdmContent a:hover {
+	color : black;
+}
+
 div.cdmContentInner {
 	margin : 0px 10px 10px 10px;
 }
